--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,3 +19,4 @@ jetbrains_compose = { id = "org.jetbrains.compose", version.ref = "compose" }
 kotlin_cocoapods = { id = "org.jetbrains.kotlin.native.cocoapods", version.ref = "kotlin" }
 kotlin_multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 libres = { id = "io.github.skeptick.libres", version.ref = "libres" }
+parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
