Introduce multiplatform-settings as key-value storage

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,18 +10,20 @@ koin = "3.2.0"
 kotlin = "1.8.20"
 libres = "1.1.8"
 sqldelight = "1.5.5"
+settings = "1.0.0"
 
 [libraries]
 compose_activity = { module = "androidx.activity:activity-compose", version.ref = "appcompat" }
 appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
 decompose = { module = "com.arkivanov.decompose:decompose", version.ref = "decompose" }
 decompose_compose = { module = "com.arkivanov.decompose:extensions-compose-jetbrains", version.ref = "decompose" }
+koin_core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
+koin_android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
+settings = { module = "com.russhwolf:multiplatform-settings-no-arg", version.ref = "settings" }
 sqldelight_android = { module = "com.squareup.sqldelight:android-driver", version.ref = "sqldelight" }
 sqldelight_jvm = { module = "com.squareup.sqldelight:sqlite-driver", version.ref = "sqldelight" }
 sqldelight_native = { module = "com.squareup.sqldelight:native-driver", version.ref = "sqldelight" }
 sqldelight_runtime = { module = "com.squareup.sqldelight:runtime", version.ref = "sqldelight" }
-koin_core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
-koin_android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 
 [plugins]
 android_application = { id = "com.android.application", version.ref = "gradle" }
