--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ decompose = "2.1.0-compose-experimental-alpha-05"
 gradle = "8.1.0"
 koin = "3.2.0"
 kotlin = "1.8.20"
-libres = "1.1.8"
+moko = "0.23.0"
 sqldelight = "1.5.5"
 settings = "1.0.0"
 
@@ -19,6 +19,9 @@ decompose = { module = "com.arkivanov.decompose:decompose", version.ref = "decom
 decompose_compose = { module = "com.arkivanov.decompose:extensions-compose-jetbrains", version.ref = "decompose" }
 koin_core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 koin_android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
+moko_resources = { module = "dev.icerock.moko:resources", version.ref = "moko" }
+moko_resources_compose = { module = "dev.icerock.moko:resources-compose", version.ref = "moko" }
+moko_resources_generator = { module = "dev.icerock.moko:resources-generator", version.ref = "moko" }
 settings = { module = "com.russhwolf:multiplatform-settings-no-arg", version.ref = "settings" }
 sqldelight_android = { module = "com.squareup.sqldelight:android-driver", version.ref = "sqldelight" }
 sqldelight_jvm = { module = "com.squareup.sqldelight:sqlite-driver", version.ref = "sqldelight" }
@@ -31,6 +34,6 @@ android_library = { id = "com.android.library", version.ref = "gradle" }
 jetbrains_compose = { id = "org.jetbrains.compose", version.ref = "compose" }
 kotlin_cocoapods = { id = "org.jetbrains.kotlin.native.cocoapods", version.ref = "kotlin" }
 kotlin_multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
-libres = { id = "io.github.skeptick.libres", version.ref = "libres" }
+moko_resources = { id = "dev.icerock.mobile.multiplatform-resources", version.ref = "moko" }
 parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
 sqldelight = { id = "com.squareup.sqldelight", version.ref = "sqldelight" }
